# zero2prod

./: .env  Cargo.toml  Dockerfile  README.md  spec.yaml  sqlx-data.json
.cargo/: config.toml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20211229131903_create_subscriptions_table.sql  20220102125204_make_status_not_null_in_subscription.sql
scripts/: init-db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
