[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0-beta.16"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.132", features = ["derive"] }
config = "0.11.0"
uuid = { version = "0.8.2", features = ["v4"] }
chrono = "0.4.19"
reqwest = { version = "0.11.8", features = ["json"] }
tracing = { version = "0.1.29", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.5", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.1.2"
tracing-actix-web = "0.5.0-beta.8"
serde-aux = "3.0.1"
unicode-segmentation = "1.8.0"
validator = "0.14.0"
secrecy = { version = "0.8.0", features = ["serde"] }
rand = "0.8.4"
thiserror = "1"
anyhow = "1"

[dev-dependencies]
claim = "0.5.0"
fake = "~2.3.0"
linkify = "0.8.0"
once_cell = "1.9.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
serde_json = "1.0.74"
wiremock = "0.5.8"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]
