[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.4.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.188", features = ["derive"] }
config = "0.13.3"
uuid = { version = "1.4.1", features = ["v4"] }
chrono = "0.4.29"
reqwest = { version = "0.11.20", features = ["json"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.17", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1.3"
tracing-actix-web = "0.7.6"
serde-aux = "4.2.0"
unicode-segmentation = "1.10.1"
validator = "0.16.1"
secrecy = { version = "0.8.0", features = ["serde", "bytes"] }
rand = "0.8.5"
thiserror = "1"
anyhow = "1"
base64 = "0.21.3"
argon2 = { version = "0.5.2", features = ["std"] }

[dev-dependencies]
claims = "0.7.1"
fake = "~2.8.0"
rand = "0.8.5"
linkify = "0.10.0"
once_cell = "1.18.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde_json = "1.0.105"
wiremock = "0.5.19"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.7.1"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]
